fix display on mobile devices

--- a/src/components/Generator/Generator.scss
+++ b/src/components/Generator/Generator.scss
@@ -1,63 +1,69 @@
-@import '../../styles/_variables.scss';
-.generator{
+@import "../../styles/_variables.scss";
+.generator {
   padding: 0 60px 60px 60px;
-  &__input{
+  &__input {
     padding: 40px;
     background-color: $colorLight;
     border-radius: $borderRadiusBig;
     min-width: 400px;
   }
-  &__preview{
+  &__preview {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-grow: 1;
     flex-direction: column;
     margin-left: 60px;
-    padding:30px;
+    padding: 30px;
     background-color: $colorLight;
     border-radius: $borderRadiusBig;
-    overflow:hidden;
-    @media (min-width: 1200px){
+    overflow: hidden;
+    @media (min-width: 1200px) {
       min-height: 500px;
     }
-    
   }
-  & .row:nth-child(1){
+  & .row:nth-child(1) {
     flex-wrap: nowrap;
   }
-  & .row:nth-child(2){
+  & .row:nth-child(2) {
     justify-content: flex-end;
   }
 }
-.modal__wrapper .generator{
-  padding:0;
+.modal__wrapper .generator {
+  padding: 0;
 }
-@media (max-width: 992px){
-  .generator{
+@media (max-width: 992px) {
+  .generator {
     padding: 0 30px 30px 30px;
-    &__preview{
-      margin-left:30px;
+    &__preview {
+      margin-left: 30px;
     }
   }
-  .modal__wrapper .generator{
-    padding:0;
+  .modal__wrapper .generator {
+    padding: 0;
   }
 }
 
-@media (max-width: 768px){
-  .generator{
-    padding-top:30px;
-    .row{
-      flex-direction:column;
+@media (max-width: 768px) {
+  .generator {
+    padding-top: 30px;
+    .row {
+      flex-direction: column;
     }
-    &__input{
-      min-width:auto;
+    &__input {
+      min-width: auto;
     }
-    &__preview{
-      margin-left:0;
-      margin-top:30px;
-      min-height:400px;
+    &__preview {
+      margin-left: 0;
+      margin-top: 30px;
+      min-height: 400px;
     }
+  }
+}
+@media (max-width: 500px) {
+  .generator,
+  .generator__input,
+  .generator__preview {
+    padding: 20px;
   }
 }
