--- a/src/components/ImagesGenerator/ImagesGenerator.scss
+++ b/src/components/ImagesGenerator/ImagesGenerator.scss
@@ -4,6 +4,12 @@
   display: grid;
   grid-gap: 20px;
   grid-template-columns: repeat(3, minmax(0, 1fr));
+  @media (max-width: 768px) {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+  @media (max-width: 500px) {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
   &__item {
     height: 230px;
     border-radius: $borderRadiusSmall;
@@ -12,7 +18,7 @@
     cursor: pointer;
     position: relative;
     overflow: hidden;
-    &:first-child{
+    &:first-child {
       background-size: auto;
       background-position: center;
       background-repeat: no-repeat;
